--- a/lesson 6/static/index.html
+++ b/lesson 6/static/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title>Lesson 6 : Jessica: IOT Solution</title>
-	<link rel='stylesheet' type="text/css" href='./static/bower_components/bootstrap/dist/css/bootstrap.css'></link>
-	<link rel='stylesheet' type="text/css" href='./static/styles.css'></link>
+	<link rel='stylesheet' type="text/css" href='./bower_components/bootstrap/dist/css/bootstrap.css'></link>
+	<link rel='stylesheet' type="text/css" href='./styles.css'></link>
 </head>
 <body>
 	<ui-view class='container'></ui-view>
 </body>
-<script src='./static/bower_components/requirejs/require.js' data-main='./static/index'></script>
+<script src='./bower_components/requirejs/require.js' data-main='./index'></script>
 </html>
